--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full">
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -10,10 +10,15 @@
     <meta name="theme-color" content="#fff" />
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link href="https://fonts.googleapis.com/css?family=Nova+Mono" rel="stylesheet">
     <title>Pomopetto</title>
   </head>
-  <body class="flex flex-col justify-center h-screen">
+  <body class="font-sans bg-grey-lightest flex flex-col justify-between items-center h-full">
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div></div>
     <div id="root"></div>
+    <div class="text-sm text-grey py-3">
+      A little Pomodoro for the web by Alasdair Monk
+    </div>
   </body>
 </html>
